# cracha

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
charts/lareira-cracha/: Chart.yaml  values.yaml
charts/lareira-cracha/crds/: accesspolicy.yaml  servicecatalog.yaml
charts/lareira-cracha/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/cracha-api/: Cargo.toml
crates/cracha-api/src/: error.rs  grpc.rs  main.rs  rest.rs  role.rs  state.rs
crates/cracha-api/src/auth/: jwks.rs  middleware.rs  mod.rs
crates/cracha-api/src/routes/: admin.rs  me.rs  mod.rs  users.rs
crates/cracha-cli/: Cargo.toml
crates/cracha-cli/src/: main.rs
crates/cracha-cli/src/render/: cluster.rs  fleet.rs  mod.rs  policy.rs
crates/cracha-controller/: Cargo.toml
crates/cracha-controller/src/: helmrelease.rs  index.rs  lib.rs  main.rs  reconcile.rs
crates/cracha-core/: Cargo.toml
crates/cracha-core/src/: catalog.rs  cluster.rs  evaluator.rs  lib.rs  policy.rs
crates/cracha-proto/: Cargo.toml  build.rs
crates/cracha-proto/proto/: cracha.proto
crates/cracha-proto/src/: lib.rs
crates/cracha-storage/: Cargo.toml
crates/cracha-storage/src/: error.rs  lib.rs  repo.rs
crates/cracha-storage/src/entities/: audit_log.rs  mod.rs  user.rs  user_grant.rs
crates/cracha-storage/src/migration/: m20260430_000001_create_users.rs  m20260430_000002_create_user_grants.rs  m20260430_000003_create_audit_log.rs  mod.rs
examples/: family.lisp  mar.lisp  pleme.lisp
