[package]
name = "cracha-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Author-side CLI for crachá — render typed Lisp forms (defcracha / defcluster / deffleet) to Helm + Pangea + Nix artifacts"

[[bin]]
name = "cracha"
path = "src/main.rs"

[dependencies]
cracha-core = { workspace = true, features = ["tatara-lisp"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tatara-lisp = { git = "https://github.com/pleme-io/tatara" }
tatara-lisp-derive = { git = "https://github.com/pleme-io/tatara" }

[lints]
workspace = true
