[package]
name = "cracha-controller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "kube-rs reconciler for crachá AccessPolicy + ServiceCatalog CRDs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cracha-controller"
path = "src/main.rs"

[dependencies]
cracha-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
clap.workspace = true
kube = { workspace = true, features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi.workspace = true
schemars.workspace = true
futures = "0.3"

[lints]
workspace = true
