[package]
name = "cracha-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Typed AccessPolicy IR for crachá — the authorization primitive of saguão"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
schemars.workspace = true
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true

# tatara-lisp authoring surface — feature-gated so wasm consumers
# (varanda) skip the proc-macro dep tree.
tatara-lisp = { git = "https://github.com/pleme-io/tatara", optional = true }
tatara-lisp-derive = { git = "https://github.com/pleme-io/tatara", optional = true }

[features]
default = []
# Enables `#[derive(TataraDomain)]` on AccessPolicySpec etc., so they
# can be authored as `(defcrachá …)` Lisp forms.
tatara-lisp = ["dep:tatara-lisp", "dep:tatara-lisp-derive"]

[lints]
workspace = true
