[package]
name = "cracha-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Generated tonic gRPC bindings for the crachá Authorize service"

[lib]
path = "src/lib.rs"

[dependencies]
tonic.workspace = true
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"

[lints]
workspace = true
